--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,52 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
-.navbar{
+.navbar {
     display: flex;
     align-items: center;
     position: fixed;
     background-color: rgb(78, 93, 93);
     width: 100%;
     height: 7%;
-    box-sizing: border-box;
-
-
-
 }
-.nav-link{
-    padding:10x;
 
-    list-style: none;
+.nav-link {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    height: 100%;
+}
+
+.nav-link li {
     display: flex;
     align-items: center;
-    gap: 30%;
+    justify-content: center;
     height: 100%;
-    box-sizing: border-box;
+    padding: 0; /* Remove padding from <li> */
 }
 
-.nav-link li a{
+.nav-link li:hover {
+    background-color: #4CAF50;
+}
+
+.nav-link li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     text-decoration: none;
-    display: block;
-    background-color: aquamarine;
-    box-sizing: border-box;
+    color: white;
     height: 100%;
-   
-
+    padding: 0 30px; /* Add padding to <a> instead of <li> */
+    box-sizing: border-box;
+    transition: transform 0.3s ease, color 0.3s ease;
 }
-.nav-link a:hover{
+
+.nav-link li a:hover {
+    transform: scale(1.1);
     color: beige;
 }
