--- a/styles.css
+++ b/styles.css
@@ -117,3 +117,60 @@ section:first-of-type {
 body{
     background-color: #f4f4f9;
 }
+
+
+#exp, #contact {
+    padding: 40px;
+    max-width: 700px;
+    margin: 40px auto;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    font-family: 'Arial', sans-serif;
+}
+
+#exp h1, #contact h1 {
+    color: #2c3e50;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 30px;
+    line-height: 1.5;
+}
+
+#exp p, #contact p {
+    font-size: 18px;
+    line-height: 2;
+    color: #34495e;
+    margin-bottom: 20px;
+    text-align: justify;
+}
+
+#exp a, #contact a {
+    color: #2980b9;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+#exp a:hover, #contact a:hover {
+    text-decoration: underline;
+}
+
+#exp h2, #contact h2 {
+    font-size: 26px;
+    color: #2c3e50;
+    margin-top: 40px;
+    text-align: center;
+}
+
+#exp ul, #contact ul {
+    padding-left: 20px;
+    list-style-type: disc;
+    font-size: 18px;
+    color: #555;
+    margin-top: 20px;
+}
+
+#exp li, #contact li {
+    margin-bottom: 15px;
+}
