--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,25 @@
 
 
 }
+.phone{
+    display: inline-block;
+    padding-left: 2%;
+    padding-right: 4%;
+    width: 10%;
+    height: 10%;
+
+
+}
+.next_to{
+    display: inline-block;
+}
+.my_photo{
+    padding-left: 1%;
+    width: 100%;
+    height: 10%;
+
+
+}
 .chess{
     padding-left: 10%;
     width: 90%;
