--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,23 @@
     display: inline-block;
     padding-left: 2%;
     padding-right: 4%;
-    width: 10%;
+    width: 11%;
     height: 10%;
 
 
 }
 .next_to{
     display: inline-block;
+}
+.nextto_clock{
+    display: inline-block;
+}
+.clock{
+    display: inline-block;
+    padding-left: 2%;
+    padding-right: 4%;
+    width: 11%;
+    height: 10%;
 }
 .my_photo{
     padding-left: 1%;
