--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+    
 .nav-logo2{
     width: 70px;
     height: 100%;
@@ -17,6 +19,7 @@
 
 }
 .phone{
+    border-radius: 10px;
     display: inline-block;
     padding-left: 2%;
     padding-right: 4%;
@@ -32,6 +35,7 @@
     display: inline-block;
 }
 .clock{
+    border-radius: 10px;
     display: inline-block;
     padding-left: 2%;
     padding-right: 4%;
@@ -39,6 +43,7 @@
     height: 10%;
 }
 .my_photo{
+    border-radius: 15px;
     padding-left: 1%;
     width: 100%;
     height: 10%;
@@ -46,6 +51,7 @@
 
 }
 .chess{
+    border-radius: 15px;
     padding-left: 10%;
     width: 90%;
     height: 10%;
@@ -55,6 +61,7 @@
 }
 
 .navbar {
+    border-radius: 15px;
     display: flex;
     align-items: center;
     position: fixed;
