fixed swipe to start of ending index of cards

--- a/src/Rotation.css
+++ b/src/Rotation.css
@@ -43,8 +43,11 @@
   
   .slider {
     display: flex;
+    will-change: transform;
+  }
+  
+  .slider.slide-active {
     transition: transform 0.5s ease-in-out;
-    width: 100%;
   }
   
   .slide {
