--- a/src/Rotation.css
+++ b/src/Rotation.css
@@ -99,9 +99,9 @@
   display: flex;
   justify-content: center;
   margin-top: 1rem;
-  gap: 0.5rem;
+  gap: .5rem;
   position: absolute;
-  bottom: 1rem;
+  bottom: 0.2rem;
   left: 50%;
   transform: translateX(-50%);
   z-index: 2;
