--- a/src/projCards.css
+++ b/src/projCards.css
@@ -77,6 +77,7 @@
 .details-btn {
   display: inline-block;
   margin-top: 1rem;
+  max-width: 95%;
   padding: 0.5rem 1rem;
   background-color: var(--light-purple);
   color: var(--surface);
